# favbox

./: .gitignore  AI_FEATURES_GUIDE.md  POSTGRES_MIGRATION_GUIDE.md  PROXY_CONFIG_GUIDE.md  docker-compose.yml  opencode.jsonc  package-lock.json  package.json  test-sync.js
backend/: .env  .env.example  README.md  alembic.ini  init-db.sql  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  ai_tagging.py  analytics.py  auth.py  backups.py  bookmarks.py  categories.py  collections.py  deps.py  search.py  semantic_search.py  websocket.py
backend/app/models/: __init__.py  backup.py  bookmark.py  category.py  collection.py  user.py
backend/app/schemas/: __init__.py  analytics.py  backup.py  bookmark.py  category.py  collection.py  user.py
backend/app/scripts/: batch_embed.py
backend/app/services/: ai_tagger.py  backup_service.py  category_initializer.py  classification_service.py  embedding_service.py  search_service.py  semantic_search.py
backend/app/utils/: __init__.py  security.py  websocket_manager.py
backend/scripts/: add_textsearch_column.py  migrate_to_postgres.py
server/: .env.example  .gitignore  README.md  package.json
server/docs/: DATABASE_SETUP.md
server/migrations/: 001_init_schema.sql
server/scripts/: migrate.js
server/src/: config.js  db.js  index.js  redis.js
src/composables/: useBookmarkActions.js
src/crdt/: BookmarkDocument.js  wasm-loader.js
src/services/: backend.js
src/storage/: bookmark.js
src/utils/: errorHandler.js  (+1 more)
(+17 files in other folders)
