[project]
name = "favbox-backend"
version = "1.0.0"
description = "FavBox browser extension backend service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "alembic==1.14.0",
    "aiosqlite==0.20.0",
    "asyncpg==0.30.0",
    "pgvector>=0.3.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.10.2",
    "pydantic-settings==2.6.1",
    "email-validator==2.2.0",
    "websockets==14.1",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.17",
    "httpx==0.28.1",
    "google-genai>=1.0.0",
    "numpy>=2.0.0",
    "greenlet>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
